--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<hi>This is the Homepage</hi>
+<h1>This is the Homepage</h1>
 
-<%= link_to 'About Section', about_path %>
+<%= link_to "Lakshya's Blog", articles_path %> | <%= link_to "About Section", about_path %>
