Create homepage and add links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1>This is the Homepage</h1>
+<div class=" center jumbotron ">
 
-<%= link_to "Lakshya's Blog", articles_path %> | <%= link_to "About Section", about_path %>
+<h1>LEARN THE TRUTH ABOUT HEALTH & NUTRITION</h1></br>
+
+<%= link_to "Sign Up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+
+</div>
