--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,7 @@
-<% if @article.errors.any? %>
-<h2>The following errors prevented the article from getting created:</h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-<% end %>
-</ul>
-<% end%>
+<%= render 'shared/errors', obj: @article %>
 
-
-
-
-<div class='row'>
-  <div class='col-xs-12'>
+<div class="row">
+  <div class="col-xs-12">
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-sm-2">
@@ -38,5 +28,5 @@
     <div class="col-xs-4 col-xs-offset-4">
       [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
     </div>
-   </div>
   </div>
+</div>
