--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -87,6 +87,11 @@ footer ul{
     padding-bottom: 15px;
 }
 
+.listing {
+    list-style: none;
+    padding: 0;
+}
+
 footer ul li{
     float:left;
     margin-left: 15px;
